# gsr

./: .gitignore  CMakeLists.txt  README.md  build.sh  env.sh  flash.sh  main.c  main.h  pm_static.yml  prj.conf  run.sh  sysbuild.conf
_HW/gsr/: gsr.kicad_pcb  gsr.kicad_prl  gsr.kicad_pro  gsr.kicad_sch
app_drivers/: adc.h
app_lib/: ble_dfu.c  ble_dfu.h  shell.c  shell.h
app_tasks/: app_tasks.c  app_tasks.h
boards/: nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
docs/: build_flash_scripts.md  components.txt
docs/.obsidian/: workspace.json
edasensor/: plot_gsr.py
inc/: app_tasks.h
keys/: mcuboot-ec256.pem
src/: adc.c  main.c
sysbuild/: mcuboot.conf
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
